implement model changes to database

--- a/BlogLibrary/BlogLibrary.csproj
+++ b/BlogLibrary/BlogLibrary.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Folder Include="Databases\Interfaces\" />
+    <Folder Include="Data\Migrations\" />
   </ItemGroup>
 
   <ItemGroup>
